# open-testers

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  live.yml
examples/: example.yaml  live-example.yaml
open_testers/: cli.py  credentials.py  memory.py  schema.py
open_testers/executor/: __init__.py  runner.py
open_testers/llm/: __init__.py  base.py  claude.py  ollama.py  openai_provider.py  stub.py
tests/: test_credentials.py  test_memory.py  test_schema.py  test_stub_provider.py
