[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-testers"
version = "0.1.0"
description = "Open-source agent core for browser-automated testing."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.48",
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "cryptography>=42",
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
open-testers = "open_testers.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["open_testers"]
